--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     
     <header>
         <nav>
-            <a href="">Inicio </a>
-            <a href="">Productos</a>
-            <a href="">Sucursales</a>
-            <a href="">Contacto</a>
+            <a href="./index.html">Inicio </a>
+            <a href="./pages/promociones.html">Productos</a>
+            <a href="./pages/sucursales.html">Sucursales</a>
+            <a href="./pages/contacto.html">Contacto</a>
 
         </nav>
         
