--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -4,20 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/stylePromociones.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Productos</title>
 </head>
 <body>
     <header>
 
         <nav>
-            <a href="../index.html">Inicio </a>
-            <a href="./promociones.html">Productos</a>
-            <a href="./sucursales.html">Sucursales</a>
-            <a href="./contacto.html">Contacto</a>
+            <ul class="nav-menu">
+                <li class="nav-menu-item">
+                    <a href="../index.html">
+                        Inicio </a>
+                </li>
+                <li class="nav-menu-item">
+                    <a href="./promociones.html"> 
+                        <span class="material-symbols-outlined">
+                        shopping_cart
+                        </span>Productos</a>
+                </li>
+                
+                <li class="nav-menu-item">
+                    <a href="./sucursales.html">
+                        <span class="material-symbols-outlined">
+                            storefront
+                            </span>
+                        Sucursales</a></li>
+                
+                <li class="nav-menu-item">
+                    <a href="./contacto.html">
+                        <span class="material-symbols-outlined">
+                            call
+                            </span>
+                        Contacto</a></li>
+
+            </ul>
 
         </nav>
     </header>
-    <main></main>
+    <main>
+
+    </main>
     <footer></footer>
 </body>
 </html>
