--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="shortcut icon" href="./assets/images/pizza.png" type="image/x-icon">
     <title>Pizzas JP</title>
 </head>
 <body>
@@ -15,10 +16,21 @@
             <a href="./pages/sucursales.html">Sucursales</a>
             <a href="./pages/contacto.html">Contacto</a>
 
+            <h2>Pizzeria JP</h2>
         </nav>
-        
     </header>
-    <main></main>
+
+    <main>
+        <p>DONDE EL SABOR Y LA CALIDAD SE ENCUENTRAN</p>
+        <!-- <img src="/assets/images/pizzaPortada.jpg" alt=""> -->
+        <!-- <img class="imagen-pizzaportada" 
+        src="https://www.infobae.com/new-resizer/TB9NRe12xQ19755sBQYS0WZOt_8=/768x432/filters:format(webp):quality(85)/cloudfront-us-east-1.images.arcpublishing.com/infobae/GIQ4HYNCMVHGNIDPQ236S5QQJE.jpg" alt="" /> -->
+
+        <img class="imagen-pizzaportada"
+             src="/assets/images/pizzaPortada.jpg" 
+             alt="" />
+
+    </main>
     <footer></footer>
     
 </body>
