--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         src="https://www.infobae.com/new-resizer/TB9NRe12xQ19755sBQYS0WZOt_8=/768x432/filters:format(webp):quality(85)/cloudfront-us-east-1.images.arcpublishing.com/infobae/GIQ4HYNCMVHGNIDPQ236S5QQJE.jpg" alt="" /> -->
 
         <img class="imagen-pizzaportada"
-             src="/assets/images/pizzaPortada.jpg" 
+             src="assets\images\pizzaPortada.jpg" 
              alt="" />
 
     </main>
