--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -43,7 +43,17 @@
 
         </nav>
     </header>
-    <main>
+    <main class= "container">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        
 
     </main>
     <footer></footer>
