--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/stylePromociones.css">
+
+    <link rel="shortcut icon" href="assets\images\pizza.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -13,34 +15,10 @@
     <header>
 
         <nav>
-            <ul class="nav-menu">
-                <li class="nav-menu-item">
-                    <a href="../index.html">
-                        Inicio </a>
-                </li>
-                <li class="nav-menu-item">
-                    <a href="./promociones.html"> 
-                        <span class="material-symbols-outlined">
-                        shopping_cart
-                        </span>Productos</a>
-                </li>
-                
-                <li class="nav-menu-item">
-                    <a href="./sucursales.html">
-                        <span class="material-symbols-outlined">
-                            storefront
-                            </span>
-                        Sucursales</a></li>
-                
-                <li class="nav-menu-item">
-                    <a href="./contacto.html">
-                        <span class="material-symbols-outlined">
-                            call
-                            </span>
-                        Contacto</a></li>
-
-            </ul>
-
+            <a href="../index.html">Inicio </a>
+            <a href="./promociones.html">Productos</a>
+            <a href="./sucursales.html">Sucursales</a>
+            <a href="./contacto.html">Contacto</a> 
         </nav>
     </header>
     <main class= "container">
