background index correcto

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="\assets\css\style.css">
     <link rel="shortcut icon" href="assets\images\pizza.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Pizzas JP</title>
+
 </head>
 <body>
     
@@ -20,19 +21,19 @@
             <a href="./pages/sucursales.html">Sucursales</a>
             <a href="./pages/contacto.html">Contacto</a>
 
-            <h2>Pizzeria JP</h2>
+            <h2 class="titulo">Pizzeria JP</h2>
         </nav>
     </header>
 
     <main>
-        <p>DONDE EL SABOR Y LA CALIDAD SE ENCUENTRAN</p>
+        <p class="leyenda1">DONDE EL SABOR Y LA CALIDAD SE ENCUENTRAN</p>
+        
         <!-- <img src="/assets/images/pizzaPortada.jpg" alt=""> -->
         <!-- <img class="imagen-pizzaportada" 
         src="https://www.infobae.com/new-resizer/TB9NRe12xQ19755sBQYS0WZOt_8=/768x432/filters:format(webp):quality(85)/cloudfront-us-east-1.images.arcpublishing.com/infobae/GIQ4HYNCMVHGNIDPQ236S5QQJE.jpg" alt="" /> -->
-
-        <img class="imagen-pizzaportada"
+        <!-- <img class="imagen-pizzaportada"
              src="assets\images\pizzaPortada.jpg" 
-             alt="" />
+             alt="" /> -->
 
     </main>
     <footer></footer>
