index Pizzeria y Productos/promociones + style Productos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="./pages/sucursales.html">Sucursales</a>
             <a href="./pages/contacto.html">Contacto</a>
 
-            <h2 class="titulo">Pizzeria JP</h2>
+            <h2 class="titulo">Pizzería JP</h2>
         </nav>
     </header>
 
