--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -22,15 +22,16 @@
         </nav>
     </header>
     <main class= "container">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="grid-item1">Muzzarella</div>
+        <div class="grid-item2">Napolitana</div>
+        <div class="grid-item3">Fugazzeta</div>
+        <div class="grid-item4">Capresse</div>
+        <div class="grid-item5">Jamón con Morrones</div>
+        <div class="grid-item6">Tropical</div>
+        <div class="grid-item7">Pepperoni</div>
+        <div class="grid-item8">Romana</div>
+        <div class="grid-item9">Cuatro Estaciones</div>
+        <div class="grid-item10">Empanadas</div>
         
 
     </main>
