--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -14,11 +14,15 @@
 <body>
     <header>
 
-        <nav>
-            <a href="../index.html">Inicio </a>
-            <a href="./promociones.html">Productos</a>
-            <a href="./sucursales.html">Sucursales</a>
-            <a href="./contacto.html">Contacto</a> 
+        <nav class="navbar">
+            <ul>
+                <li><a href="../index.html">Inicio </a></li>
+                <li><a href="./promociones.html">Productos</a></li>
+                <li><a href="./sucursales.html">Sucursales</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+                                   
+             </ul>
+
         </nav>
     </header>
     <main class= "container">
