--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
              src="assets\images\pizzaPortada.jpg" 
              alt="" /> -->
 
+        <div class="container">
+            <div class="item1">ONE</div>
+            <div class="item2">
+                <p>Fue fundada en 1990 por Juan Perez, que instaló el primer local en la esquina de Rivadavia y La Plata, en el barrio porteño de Caballito, recién llegado de España y con la idea de crear la mejor pizzería. Con el paso de los años el negocio fue creciendo, llegando a tener más de 10 sucursales.</p>
+            </div>
+
+        </div>
+
     </main>
     <footer></footer>
     
