--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <p>DONDE EL SABOR Y LA CALIDAD SE ENCUENTRAN</p>
             </div>
             <div class="item2">
-                <p>Fue fundada en 1990 por Juan Perez, que instaló el primer local en la esquina de Rivadavia y La Plata, en el barrio porteño de Caballito, recién llegado de España y con la idea de crear la mejor pizzería. Con el paso de los años el negocio fue creciendo, llegando a tener más de 10 sucursales.</p>
+                <p>¿Quienes somos?
+                    <br>
+                    <br>Fue fundada en 1990 por Juan Perez, que instaló el primer local en la esquina de Rivadavia y La Plata, en el barrio porteño de Caballito, recién llegado de España y con la idea de crear la mejor pizzería. Con el paso de los años el negocio fue creciendo, llegando a tener más de 10 sucursales.</p>
             </div>
 
         </div>
