--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <main>
         <p class="leyenda1">DONDE EL SABOR Y LA CALIDAD SE ENCUENTRAN</p>
+
+        
         
         <!-- <img src="/assets/images/pizzaPortada.jpg" alt=""> -->
         <!-- <img class="imagen-pizzaportada" 
@@ -47,7 +49,7 @@
             <div class="item2">
                 <p>¿Quienes somos?
                     <br>
-                    <br>Fue fundada en 1990 por Juan Perez, que instaló el primer local en la esquina de Rivadavia y La Plata, en el barrio porteño de Caballito, recién llegado de España y con la idea de crear la mejor pizzería. Con el paso de los años el negocio fue creciendo, llegando a tener más de 10 sucursales.</p>
+                    <br>Nuestra historia inicia en 1990 por Juan Pedro, maestro fundador, recién llegado de España con la convicción de crear la mejor pizzería. Así, instaló el primer local en la esquina de Rivadavia y La Plata, en el barrio porteño de Caballito. Con el paso de los años, el negocio fue creciendo, llegando a tener más de 10 sucursales.</p>
             </div>
 
         </div>
