--- a/pages/contacto_franquicia.html
+++ b/pages/contacto_franquicia.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <a href="../index.html">Inicio</a>
             <a href="./promociones.html">Productos</a>
             <a href="./sucursales.html">Sucursales</a>
