--- a/pages/contacto_trabaja.html
+++ b/pages/contacto_trabaja.html
@@ -11,7 +11,7 @@
 </head>
 
 <header>
-    <nav>
+    <nav class="navbar">
         <a href="../index.html">Inicio</a>
         <a href="./promociones.html">Productos</a>
         <a href="./sucursales.html">Sucursales</a>
