--- a/pages/contacto_franquicia.html
+++ b/pages/contacto_franquicia.html
@@ -13,10 +13,12 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="../index.html">Inicio</a>
-            <a href="./promociones.html">Productos</a>
-            <a href="./sucursales.html">Sucursales</a>
-            <a href="./contacto.html">Contacto</a>
+            <ul>
+                <li><a href="./index.html">Inicio </a></li>
+                <li><a href="./pages/promociones.html">Productos</a></li>
+                <li><a href="./pages/sucursales.html">Sucursales</a></li>
+                <li><a href="./pages/contacto.html">Contacto</a></li>
+            </ul>
         </nav>
     </header>
         
