--- a/pages/contacto_franquicia.html
+++ b/pages/contacto_franquicia.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="./index.html">Inicio </a></li>
+                <li><a href="../index.html">Inicio </a></li>
                 <li><a href="./pages/promociones.html">Productos</a></li>
                 <li><a href="./pages/sucursales.html">Sucursales</a></li>
                 <li><a href="./pages/contacto.html">Contacto</a></li>
