--- a/pages/contacto_franquicia.html
+++ b/pages/contacto_franquicia.html
@@ -15,9 +15,9 @@
         <nav class="navbar">
             <ul>
                 <li><a href="../index.html">Inicio </a></li>
-                <li><a href="./pages/promociones.html">Productos</a></li>
-                <li><a href="./pages/sucursales.html">Sucursales</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
+                <li><a href="../pages/promociones.html">Productos</a></li>
+                <li><a href="../pages/sucursales.html">Sucursales</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
