--- a/pages/contacto_franquicia.html
+++ b/pages/contacto_franquicia.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poné tu propia franquicia</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/styleContacto.css">
+    <link rel="shortcut icon" href="../assets/images/pizza.png" type="image/x-icon">
+    <title>Poné tu propia franquicia</title>
 </head>
 <body>
     <header>
