--- a/pages/pizza_backend_entrance.html
+++ b/pages/pizza_backend_entrance.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/styleContacto.css">
+    <link rel="stylesheet" href="../assets/css/styleBackendEntrance.css">
     <link rel="shortcut icon" href="../assets/images/pizza.png" type="image/x-icon">
-    <title>Trabaja con nosotros</title>
+    <title>Backend Entrance</title>
     
 </head>
 
@@ -21,7 +21,6 @@
                 <li><a href="../pages/sucursales.html">Sucursales</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
                 <li><a href="../pages/pizza_backend_entrance.html">! Backend Zone !</a></li>
-
             </ul>
         </nav>
 </header>
@@ -29,52 +28,51 @@
     <div class="form-container">
 
         <div class="box">
-            <h1>¿Querés trabajar con nosotros?</h1>
+            <h1>PIZZA BACKEND ENTRANCE C-R-U-D</h1>
                 <div class="formulario">
                     <form action="#">
                             <div>
                                 <label for="nombre">Nombre:</label>
-                                <input type="text" name="nombre" id="nombre" placeholder="Ingresa tu nombre">
+                                <input type="text" name="nombre" id="nombre" placeholder="Ingresa nombre pizza">
                             </div>
 
                             <div>
-                                <label for="apellido">Apellido:</label>
-                                <input type="text" name="apellido" id="apellido" placeholder="Ingresa tu apellido">
+                                <label for="tamanio">Tamaño:</label>
+                                <input type="text" name="tamanio" id="tamanio" placeholder="Ingresa tamanio pizza">
                             </div>
 
+                            <div>
+                                <label for="precio">Precio</label>
+                                <input type="precio" name="precio" id="precio" placeholder="Ingresa precio pizza">
+                            </div>
+
+                          <!--
                             <div>
                                 <label for="nacimiento">Fecha de Nacimiento</label>
                                 <input type="date" name="nacimiento" id="nacimiento">
                             </div>
+                           -->
 
-                            <div>
-                                <label for="localidad">Localidad</label>
-                                <input type="text" name="localidad" id="localidad" placeholder="Ingresa tu localidad">
-                            </div>
-
-                            <div>
+                          <!--  <div>
                                 <label for="email">Email:</label>
                                 <input type="email" name="email" id="email" placeholder="Ingresa tu e-mail">
-                            </div>
+                            </div> -->
 
-                            <div>
-                                <label for="telefono">Teléfono:</label>
-                                <input type="tel" name="telefono" id="telefono" placeholder="Ingresa tu número de teléfono">
-                            </div>
-
-                        <div class="centro">
+                         <!-- <div class="centro">
                             <div>
                                 <label for="archivo">Adjuntar archivo CV</label>
                                 <a href="#">
                                     <button type="button">Seleccionar Archivo</button>
                                 </a>
-                            </div>
-                        </div>
+                            </div>  
+                        </div>    -->
 
+                        <!--
                         <div>
                             <label for="mensaje">Mensaje:</label>
                             <textarea name="mensaje" id="mensaje" rows="10" placeholder="Deja tu mensaje"></textarea>
                         </div>
+                        -->
 
                         <div class="checkbox">
 
