--- a/pages/pizza_backend_entrance.html
+++ b/pages/pizza_backend_entrance.html
@@ -20,8 +20,8 @@
                 <li><a href="../pages/promociones.html">Productos</a></li>
                 <li><a href="../pages/sucursales.html">Sucursales</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
-                <li><a href="../pages/pizza_backend_entrance.html">! Backend Zone !</a></li>
-            </ul>
+                <li><a href="https://mga11.pythonanywhere.com/lista-de-pizzas/pizza">! Backend Zone !</a></li>
+                <!-- <li><a href="./pages/pizza_backend_entrance.html">! Backend Zone !</a></li>            </ul>
         </nav>
 </header>
 
